changing wording on faq

--- a/app/info/faq/page.mdx
+++ b/app/info/faq/page.mdx
@@ -71,7 +71,7 @@ If you need to apply for a visa and need a Letter of Invitation, please email [s
 * Place of Birth (City, Country)  
 * Phone Number
 
-To reduce fraud surrounding visa letters, we ask that you only request a letter after you have logged over 30 hours towards [The Bay](/info/the-bay). 
+To reduce fraud surrounding visa letters, you can only request a letter after you have logged over 30 hours towards [The Bay](/info/the-bay) and shipped two projects. 
 
 ### Who Can I Contact for More Information?
 
