Travel page on FAQ

--- a/app/info/for-parents/page.mdx
+++ b/app/info/for-parents/page.mdx
@@ -71,6 +71,7 @@ If you need to apply for a visa and need a Letter of Invitation, please email [s
 - Date of Birth
 - Place of Birth (City, Country)
 - Phone Number
+- Permanent Address
 
 To reduce fraud surrounding visa letters, we ask that you only request a letter after your child has logged over 30 hours towards The Bay (more info [here](?tab=t.yxrvbn3vw5h5)).
 
