Change ferry times

--- a/app/info/travel/page.mdx
+++ b/app/info/travel/page.mdx
@@ -18,8 +18,8 @@ When deciding the format for travel stipends for this event, we wanted to come u
 
 ### Arrival/Departure Times
 
-Shipwrecked starts at around 3:00 pm on Friday, August 8th and ends at around 5:00 pm on Monday, August 11th. These times are subject to change, but won't change drastically.
-**If you are flying in, you should plan to arrive before 1:00 pm on Friday, August 8th and leave after 8:00 pm Monday, August 11th.**
+The last ferry to the island leaves EDIC Pier at 6:00 PM on Friday, August 8th and the first ferry back will arrive into EDIC Pier at around 1:30 PM on Monday, August 11th. These times likely will not change, but if they do, it will not be drastic.
+**If you are flying in, you should plan to arrive before 4:00 pm on Friday, August 8th and leave after 4:00 pm Monday, August 11th.**
 If these times do not work for you, please let us know. The island is only accessible by ferry, so **dropoff and pickup times are not flexible.** We will have somewhere to stay for international attendees who need to arrive a day early or stay an extra day - let us know if you need these accommodations.
 
 ### Getting reimbursed
