changing 'landing' to 'leaving'

--- a/app/info/travel/page.mdx
+++ b/app/info/travel/page.mdx
@@ -47,7 +47,7 @@ This information is formatted as it is on the Visa application - it may be forma
 
 **Date of Arrival in U.S.**: August 8th, 2025 (may be August 7th if there are no available flights for you landing on the morning of the 8th)\
 **Arrival City**: Boston\
-**Date of Departure from U.S.**: August 11th, 2025 (may be August 12th if there are no available flights for you landing on the night of the 11th)\
+**Date of Departure from U.S.**: August 11th, 2025 (may be August 12th if there are no available flights for you leaving on the night of the 11th)\
 **Departure City**: Boston\
 **Provide the locations you plan to visit in the U.S.**: Boston
 
