Link stuff on /info/travel (#393)
* Travel page on FAQ

* Change ferry times

* Move travel stipends to the bottom

* Move travel stipend explanation

* Link parent letter and travel insurance

--- a/app/info/travel/page.mdx
+++ b/app/info/travel/page.mdx
@@ -83,8 +83,9 @@ In addition, make sure you have:
 
 * A valid, unexpired passport
 * Visa or eTA (electronic travel authorisation)
-* Invitation and consent letter signed by parents along with attached photocopy of parents’ ID. If you have not received an invitation, please let us know. You may be denied entry into the United States without a valid consent letter. You can print out the template here.
-* Proof of travel insurance (If you don’t have travel insurance yet, please use this website to purchase a suitable plan). It will likely be under $10.
+* Invitation and consent letter signed by parents along with attached photocopy of parents’ ID. If you have not received an invitation, please let us know. You may be denied entry into the United States without a valid consent letter. You can print out the template [here](https://docs.google.com/document/d/1FYepPBVY0qqr8HCporME-pYu8H9DB4zwR8Y6mqa0PB0/edit?tab=t.0).
+* Proof of travel insurance (If you don’t have travel insurance yet, please use [this website](https://www.visitorscoverage.com/visitor-insurance/) to purchase a suitable plan). It will likely be under $10.
+
 
 <br/>
 ---
