Update ship approval wording

--- a/app/review/review-guidelines/shipped-approval.mdx
+++ b/app/review/review-guidelines/shipped-approval.mdx
@@ -3,11 +3,24 @@
 ### Definitions:
 
 - **Shipped Project:** A project that is code-complete, published on source control (e.g., GitHub), and easily experienceable (live website or clear local setup instructions taking \<2 minutes). It should be polished, with a descriptive README and minimal bugs/visual glitches.
+- **High Quality (Must fit at least 3 of the requirements below):**
+    - Feels meaningful in some way
+        - https://thesupernile.github.io/Sortolizer/ helped me understand how sorting algorithms work.
+    - Well designed, easy to use
+        - https://hc-wallpaper-app.vercel.app/ is intuitive, and easy to use.
+    - Clean and well thought out
+        - https://hc-wallpaper-app.vercel.app/ shows interesting design, that is clearly well thought out.
+    - Custom art/hand-made design
+        - https://bffwouj3472.itch.io/folding-fury has art made for the project that is well integrated.
+    - Novel mechanics
+        - https://livingroom.sirbread.dev/ has mechanics (sharing a tv remote live with others on the internet) which I've never seen before.
+Overarching, has to be no AI slop for all projects
 
 ### Review Process:
 
 1.  **Initial Checks:**
     - Verify project is a "Shipped Project" (see definition above).
+    - Verify the project is "High Quality" (see definition above)
     - Assess if reported time is realistic for the project.
     - Confirm approximately one commit per hour (sample random commits and optionally skim others).
 2.  **Decision Making:**
