Update /info pages
Also added a suggested packing list

--- a/app/info/the-bay/page.mdx
+++ b/app/info/the-bay/page.mdx
@@ -1,36 +1,37 @@
 # The Bay
 
-<section id="callout"><p>Before Shipwrecked, you'll need to earn your spot through participating in The Bay\!</p></section>
+<a href="/bay"><section id="callout"><p>Before Shipwrecked, you will need to earn your spot by participating in The Bay\! (Click me\!)</p></section></a>
 
-## Your goal is to make a polished, fully deployed project that will go viral.
+Please check the [\#shipwrecked-bulletin](https://hackclub.slack.com/archives/C08KH979K9U) channel on Slack for the most up-to-date information.
 
-* Install Hackatime on your computer and start coding.  
-* Make 4 projects you are proud of (roughly 15 hours each), which you then promote to get other people to check it out  
-  * Most people will make 4-6 projects along the way, which they will only promote a few of.  
-  * Making projects that other people like is an iterative process\! You will learn some important lessons along the way and apply those learnings to future projects :)   
-* For example, let’s say you make a [.gitignore file generator](https://github.com/zachlatta/gitignorer) that you work really hard on to make it as polished and functional as possible, publish it on Hacker News, and get on the front page for a day; we would consider that as going viral\!  
+## Your goal is to make polished, fully-deployed projects.
+
+* Install [Hackatime](https://hackatime.hackclub.com/) on your computer and start coding.
+* Make 4 projects you are proud of (roughly 15 hours each).
+  * Most people will make 4-6 projects along the way, some of which they will try to promote to go viral.
+  * Making projects that other people like is an iterative process\! You will learn some important lessons along the way and apply those learnings to future projects :)
+* For example, let’s say you make a [.gitignore file generator](https://github.com/zachlatta/gitignorer) that you work really hard on to make it as polished and functional as possible, publish it on Hacker News, and get on the front page for a day; we would consider that as going viral\!
 * You can find more thresholds for what we consider going viral for the event on this page.
 
 You are welcome and encouraged to team up — try to find a partner to work on your project with you\!
 
 ## That sounds great and all, but what are the exact requirements?
 
-To complete The Bay, there are **2 requirements**. 
+To complete The Bay, there is **1 main requirement**: Each person must spend **at least 60 hours** (roughly 15 hours per project) and ship 4 fully deployed projects.\*
 
-1. Each person must spend **at least 60 hours** (roughly 15 hours per project) and ship 4 fully deployed projects\*  
-2. **Go Viral: [Here’s what that exactly means.](/info/go-viral)**
+* Optional: Go Viral: [Here’s what that exactly means.](/info/go-viral)
    * You will make multiple projects. Only 1 of your projects must go viral to fulfill this requirement.
-3. Optional: Attend workshops, lightning talks, and other virtual events to help with your project\!
+* Optional: Attend workshops, lightning talks, and other virtual events to help with your project\!
 
-**What happens if I complete 60 hours but don't meet the requirements for my project going viral?** 
+**Wait, is going viral a requirement?** 
 
-- Our in-person experience, Shipwrecked, is capped at 130 spots.
-- If you go viral (according to [these requirements](/info/go-viral)), you are **guaranteed** a spot if you are within the first 130 people to go viral and complete 60 hours as per our requirements.
-- If you do not go viral, but ship high quality projects and log over 60 hours, you will be put on a waiting list. We will start inviting people from the waiting list in the order they were added, 6 weeks before Shipwrecked. We might, at our discretion, offer other opportunities for people to get their name off the waitlist and get an invitation to Shipwrecked.
+- While it was at launch, going viral is no longer a requirement to earning an invite to Shipwrecked.
+- However, if you go viral (according to [these requirements](/info/go-viral)), you will get certain privileges at Shipwrecked such as getting to stay in the ocean-facing Executive Suite, the fanciest accomdation on the island!
+- Our goal is to challenge you to make quality projects that other people would use and enjoy.
 
 ## TL;DR:
 
-1\. Build 4 projects in The Bay and try to make them go viral (see above for what going viral means). Spend 60 hours on quality work and you'll get an invite  
+1\. Build 4 projects in The Bay. Spend 60 hours on quality work and you will get an invite.  
 2\. Go to Shipwrecked on August 8-11 — a hackathon on an island in the Massachusetts Bay\!
 
 \*This is super achievable\! One way you could do this is every week, meet up with your friends either in person or over The Pier — our video game-like digital meeting space — for 5 hours, whether throughout the week or in one day. If you join for 12 weekends doing quality work, you should have 60 hours\!
@@ -38,10 +39,10 @@ To complete The Bay, there are **2 requirements**.
 ## FAQ:
 ### Can I work on a project I started before the event?
 Yes! Only hours you put in after the event was announced will be counted
-### How much time can I log for art(video editing, traditional art, etc)?
+### How much time can I log for art (video editing, traditional art, etc.)?
 Up to 20% of your time submitted can be art! You're welcome to do more though it won't count towards your hours.
 ### Can I combine views across multiple platforms to reach the viral thresholds?
-No. However, you may make multiple posts on one platform and combine those views as long as you combine them in good faith. _(A bad faith example would be if you make 200 duplicate posts on reddit & get 3 of your friends to upvote each one)_
+No. However, you may make multiple posts on one platform and combine those views as long as you combine them in good faith. _(A bad faith example would be if you make 200 duplicate posts on Reddit and get 3 of your friends to upvote each one)_
 
 _We reserve the right to decide if a project meets the criteria. If you project does not meet the criteria, we will let you know how your project does not meet it._
 ### Do my projects have to be open-source & usable by others?
@@ -56,4 +57,6 @@ That means it must be at least one of the following:
 Your project must have:
 
 - Open source code available on GitHub
-- A descriptive readme that explains how to use/install your project
+- A descriptive README that explains how to use/install your project
+
+More detailed requirements will be shown in The Bay when you submit.
