--- a/app/info/travel/page.mdx
+++ b/app/info/travel/page.mdx
@@ -1,54 +1,68 @@
 # Travel Information
 
-## Travel Stipends
+## Getting to the ferry
+Dropoff & pickup will happen at [EDIC Pier](https://maps.app.goo.gl/kMFxHkyxW6pCVzGF7) in the Seaport District. Throughout the day on Friday, organizers will be set up in the nearby park to welcome attendees.
 
-### How they work:
+EDIC Pier is near the "Silver Line Way" Silver Line stop on the [MBTA](https://www.mbta.com/).
 
-For each additional hour (beyond the base 60\) you work on your project for The Bay, $10 will be put towards your travel stipend. Once you reach 40 hours towards your travel stipend, you will have the opportunity to apply for additional case by case, need-based, travel stipends (intended for international folks). These additional stipends are  also merit-based because we have a limited fund, but if you aren't given one, you can continue to work for more hours on your project (still at $10 per hour) until your stipend covers your flights\!
+From Boston Logan International Airport, you can take the [Silver Line 1](https://www.mbta.com/schedules/741/line?schedule_direction[direction_id]=1) for free to Silver Line Way and walk ~12 minutes to the dock ([Walking Directions](https://www.google.com/maps/dir/Silver+Line+Way,+Boston,+MA+02210/EDIC+Pier,+Boston,+MA+02210/@42.3454298,-71.0435438,16z/data=!4m14!4m13!1m5!1m1!1s0x89e37a82db2f586d:0x85888304a6356a47!2m2!1d-71.038801!2d42.347241!1m5!1m1!1s0x89e37a9b7c02e055:0x734f992490b01b85!2m2!1d-71.037234!2d42.3433798!3e2!5m1!1e1)). Hack Club staff will be stationed at the airport both before and after the event to chaperone participants who are flying into Boston.
 
-### What the need-based additional stipends look like:
-
-As explained above, once you hit 40 hours past the base 60 hours (100 hours total), you will have the opportunity to apply for a need-based stipend. Here's what the application process will look like. When you apply, you will be prompted to answer some short answer questions. The goal of these questions is for us to get to know you a bit & gain a better understanding of why you are applying. After you submit the initial application, you will be invited to a quick chat. 
-
-*An explanation of why we picked this system is at the bottom of this page.*
+For those driving or taking rideshares, EDIC Pier should serve as a valid address for GPS navigation. You can also use the address 9 Terminal St, Boston, MA 02210.
 
 ## Booking Flights
 
 ### Arrival/Departure Times
 
-The last ferry to the island leaves EDIC Pier at 6:00 PM on Friday, August 8th and the first ferry back will arrive into EDIC Pier at around 1:30 PM on Monday, August 11th. These times likely will not change, but if they do, it will not be drastic.
-**If you are flying in, you should plan to arrive before 4:00 pm on Friday, August 8th and leave after 4:30 pm Monday, August 11th.**
-If these times do not work for you, please let us know. The island is only accessible by ferry, so **dropoff and pickup times are not flexible.** We will have somewhere to stay for international attendees who need to arrive a day early or stay an extra day - let us know if you need these accommodations.
+The two ferries to the island leave [EDIC Pier](https://maps.app.goo.gl/kMFxHkyxW6pCVzGF7) at 5 p.m. and 6 p.m. on Friday, August 8th and the two ferries back will arrive into EDIC Pier at around 1:30 p.m. and 2:30 p.m. on Monday, August 11th. These times likely will not change, but if they do, it will not be drastic.
+
+**If you are flying in, you should plan to arrive, at the latest, before 4 p.m. on Friday, August 8th and leave after 4 p.m. (domestically) or 5 p.m. (internationally) on Monday, August 11th.**
+If these times do not work for you, please let us know. The island is only accessible by ferry, so **dropoff and pickup times are not flexible.** Latecomers will have to wait until Saturday morning to go to the island if they miss the ferry. We will have somewhere to stay for attendees whose only option is to arrive a day early or stay an extra day — let us know if you need these accommodations.
 
 ### Getting reimbursed
 
-On completion of [The Bay](/info/the-bay), you will be eligible to receive a reimbursement for your flight as described above. If reimbursement does not work for you, please contact us and we can buy your flight for you as long as you have earned enough travel stipend money.
+On completion of [The Bay](/info/the-bay), you will be eligible to receive a reimbursement for your flight as described above. If reimbursement does not work for you, please contact us, and we can buy your flight for you as long as you have earned enough travel stipend money.
+
+## Travel Stipends
+
+### How they work:
+
+For each additional hour (beyond the base 60 required for an invite\) you work on your project for The Bay, $10 will be put toward your travel stipend. Once you reach 40 hours toward your travel stipend, you will have the opportunity to apply for additional case by case, need-based travel stipends (intended for international folks). These additional stipends are also merit-based because we have a limited fund, but if you aren't given one, you can continue to work for more hours on your project (still at $10 per hour) until your stipend covers your flights\!
+
+### What the need-based additional stipends look like:
+
+As explained above, once you hit 40 hours past the base 60 hours (100 hours total), you will have the opportunity to apply for a need-based stipend. Here's what the application process will look like. When you apply, you will be prompted to answer some short answer questions. The goal of these questions is for us to get to know you a bit and gain a better understanding of why you are applying. After you submit the initial application, you will be invited to a quick chat. 
+
+*An explanation of why we picked this system is at the bottom of this page.*
 
 ## Travelling Internationally
 
 ### Applying for a Visa/ESTA
 
-Before you apply for a visa, you need a letter of invitation. To get one, email [shipwrecked@hackclub.com](mailto:shipwrecked@hackclub.com) with the following information: 
+When applying for a visa, you may need a letter of invitation. To get one, email [shipwrecked@hackclub.com](mailto:shipwrecked@hackclub.com) with the following information: 
 
-* First and Last Name  
-* Passport Details (Passport Number, Issuing Country, Expiration Date)   
-* Date of Birth  
-* Place of Birth (City, Country)  
+* First and Last Name
+* Passport Details (Passport Number, Issuing Country, Expiration Date)
+* Date of Birth
+* Place of Birth (City, Country)
 * Phone Number
 * Permanent Address
 
-To reduce fraud surrounding visa letters, you can only request a letter after you have logged over 30 hours towards [The Bay](/info/the-bay) and shipped two projects. 
+To reduce fraud surrounding visa letters, you can only request a letter after you have logged over 30 hours toward [The Bay](/info/the-bay) and shipped two projects. 
 
-### What to put on your Visa/ESTA Application
+### What to put on your visa/ESTA Application
 
-This information is formatted as it is on the Visa application - it may be formatted slightly differently on the ESTA application.
+This information is formatted as it is on the visa application. It may be formatted slightly differently on the ESTA application.
 
 #### Provide a complete itinerary for your travel to the U.S.
 
-**Date of Arrival in U.S.**: August 8th, 2025 (may be August 7th if there are no available flights for you landing on the morning of the 8th)\
-**Arrival City**: Boston\
-**Date of Departure from U.S.**: August 11th, 2025 (may be August 12th if there are no available flights for you leaving on the night of the 11th)\
-**Departure City**: Boston\
+**Date of Arrival in U.S.**: August 8th, 2025 (may be August 7th if there are no available flights for you landing on the morning of the 8th)
+
+**Arrival City**: Boston
+
+**Date of Departure from U.S.**: August 11th, 2025 (may be August 12th if there are no available flights for you leaving on the night of the 11th)
+
+**Departure City**: Boston
+
 **Provide the locations you plan to visit in the U.S.**: Boston
 
 #### Address Where You Will Stay in the U.S.
@@ -56,22 +70,29 @@ This information is formatted as it is on the Visa application - it may be forma
 
 
 #### Contact Person or Organization in the United States
-**Contact Person**: Zach Latta\
-**Organization Name**: The Hack Foundation (dba. Hack Club)\
-**Relationship to You**: Other\
-**U.S. Address**: 8605 Santa Monica Blvd #86294, West Hollywood, CA, 90069\
-**Phone Number**: (855) 625-4225\
+
+**Contact Person**: Zach Latta
+
+**Organization Name**: The Hack Foundation (d.b.a. Hack Club)
+
+**Relationship to You**: Other
+
+**U.S. Address**: 8605 Santa Monica Blvd #86294, West Hollywood, CA, 90069
+
+**Phone Number**: (855) 625-4225
+
 **Email Address**: team@hackclub.com
 
 
-#### If your Visa interviewer is concerned
+#### If your visa interviewer is concerned
 
-Hopefully your Visa interview goes smoothly, but in case your interviewer has concerns about Hack Club, you can try telling them the following (which is listed on your letter of invitation as well):
+Hopefully your visa interview goes smoothly, but in case your interviewer has concerns about Hack Club, you can try telling them the following (which is listed on your letter of invitation as well):
 
-* They might get confused about the difference between The Hack Foundation and Hack Club. At the top of the letter, the organization is listed as “The Hack Foundation (dba. Hack Club)”, “dba” meaning “doing business as,” which explains the two different names.
-    * As well as it being listed on the letter, [the.hackfoundation.org](https://the.hackfoundation.org) explains this. It also links to hackclub.com, showing that it is also our official website.
+* They might get confused about the difference between The Hack Foundation and Hack Club. At the top of the letter, the organization is listed as “The Hack Foundation (d.b.a. Hack Club)”, “d.b.a.” meaning “doing business as,” which explains the two different names. The Hack Foundation serves as the legal entity for Hack Club.
+    * As well as it being listed on the letter, [the.hackfoundation.org](https://the.hackfoundation.org) explains this. It also links to [hackclub.com](https://hackclub.com/), showing that it is also our official website.
 * If they have concerns about the validity of the letter of invitation, it says at the bottom that they can email team@hackclub.com. 
 * If they are concerned that The Hack Foundation may not be a real organization, our EIN (81-2908499) is listed on the letter. This can be verified on the IRS website at [apps.irs.gov/app/eos](https://apps.irs.gov/app/eos) (first result from googling “IRS Tax Exempt Organization Search”).
+    * You may find it helpful to bring a copy of Hack Club's [most recent tax filing](https://apps.irs.gov/pub/epostcard/cor/812908499_202212_990_2024011022205181.pdf) with you to the interview.
 
 ### Getting ready to travel:
 
@@ -81,7 +102,7 @@ Refer to the [FAQ](/info/faq)!
 
 In addition, make sure you have:
 
-* A valid, unexpired passport
+* A valid, unexpired passport (the U.S. recommends that your passport be valid for at least six months after your arrival in the U.S.)
 * Visa or eTA (electronic travel authorisation)
 * Invitation and consent letter signed by parents along with attached photocopy of parents’ ID. If you have not received an invitation, please let us know. You may be denied entry into the United States without a valid consent letter. You can print out the template [here](https://docs.google.com/document/d/1FYepPBVY0qqr8HCporME-pYu8H9DB4zwR8Y6mqa0PB0/edit?tab=t.0).
 * Proof of travel insurance (If you don’t have travel insurance yet, please use [this website](https://www.visitorscoverage.com/visitor-insurance/) to purchase a suitable plan). It will likely be under $10.
