--- a/app/info/faq/page.mdx
+++ b/app/info/faq/page.mdx
@@ -1,6 +1,6 @@
 # FAQ:
 
-*Please note, day-of logistics, such as schedules or suggested packing lists, are subject to change. We will provide more specific instructions closer to the event.*
+*Please note, day-of logistics, such as schedules or suggested packing lists, are subject to change. We will provide more specific instructions to participants closer to the event.*
 
 ### What is Shipwrecked?
 
@@ -8,57 +8,49 @@ Shipwrecked is a themed hackathon where you’re invited to build creative proje
 
 ### What is The Bay?
 
-[The Bay](/info/the-bay) is a 3 month online event where you will build 4 projects (~ 15 hours each) that you’ve always wanted to build, share it with the world to make it go viral\! More info on what that means [here](/info/go-viral). We will host workshops and online coding sprints to help you get there!
+[The Bay](/info/the-bay) is a 3-month online event where you will build 4 projects (~ 15 hours each) that you have always wanted to build\. We will host workshops and online coding sprints to help you get there!
 
 ### When & Where is Shipwrecked?
 
-Shipwrecked starts **Friday, August 8th at 3:00 pm** and ends **Monday, August 11th at 5:00 pm** on Cathleen Stone Island, located in Boston Harbor. Enjoy a blend of outdoor adventure and coding in a drop dead gorgeous setting\!
+Shipwrecked starts **Friday, August 8th at 4 p.m.** and ends **Monday, August 11th at 3 p.m.** on Cathleen Stone Island, located in Boston Harbor. Enjoy a blend of outdoor adventure and coding in a drop dead gorgeous setting\!
 
 *These times (not dates) are subject to change. We will communicate any updated times as soon as possible.*
 
 ### Dropoff & Pickup
 
-Dropoff & pickup will happen at EDIC Pier in the Seaport District. The ferry will leave promptly one hour after the start of the event and will not wait for latecomers. We will give further instructions closer to the event.
+Dropoff & pickup will happen at [EDIC Pier](https://maps.app.goo.gl/kMFxHkyxW6pCVzGF7) in the Seaport District. On Friday, there are two ferries scheduled at 5 p.m. and 6 p.m. The ferry will leave promptly, and latecomers will have to wait until Saturday morning to go to the island if they miss the ferry. We will arrive back on Monday at 1:30 p.m. and 2:30 p.m. We will give further instructions closer to the event.
+
+EDIC Pier is near the "Silver Line Way" Silver Line stop on the [MBTA](https://www.mbta.com/). Hack Club staff will be stationed at Boston Logan International Airport both before and after the event to chaperone participants who are flying into Boston.
 
 ### Who Can Participate?
 
-Anyone 18 and under at the time of the event and who has completed [The Bay](/info/the-bay) is allowed to participate\! Travel grants will be available to everyone who completes the program. Please contact us for any personalized questions.
+Anyone 18 and under at the time of the event and who has completed [The Bay](/info/the-bay) is allowed to participate\! Travel grants will be available to everyone who completes the program. Please see [Travel Info](/info/travel) for more details and contact us for any personalized questions.
 
 ### What if I complete The Bay but can't attend Shipwrecked?
-There will be some alternative prizes that will be really fun & neat we will send you. _(these will be announced at a later date)_
+You will be able to redeem the hours you spent making projects in a shop for fun, neat prizes! _(These will be announced soon.)_
 
 ### Is Participation Free?
 
-Yes\! Participation is entirely free—but only if you complete [The Bay](/info/the-bay). Without completing [The Bay](/info/the-bay), you won’t be able to join Shipwrecked.
+Yes\! Participation is entirely free—but only if you complete [The Bay](/info/the-bay). Without completing The Bay, you won’t be able to join Shipwrecked.
 
 ### What Should I Bring?
 
-* Toiletries:
-  * Towel  
-  * Other hygiene products
-* A laptop (with charger).
-* A water bottle.
-* Any hardware they would like to use for their project.
-* Comfortable walking shoes.
-* (Optional) Sandals for beach activities.
-* Clothes for 3 nights and clothes you are comfortable swimming in (there may be an opportunity to swim).
-  * While it will be summer, it can still get chilly at night, so bring a light jacket or sweater.
-* It is too early to tell right now, but you *may* need a rain jacket / umbrella.
+Please see our [Suggested Packing List](/Shipwrecked%20Suggested%20Packing%20List.pdf) for an idea of what to bring. Remember that we will be on an island during the Boston summer and will be subject to the elements. Make sure to check the weather forecast leading up to the event\!
 
 ### What Activities Can I Expect?
 
-There will be a variety of workshops and sessions designed for all skill levels as well as some fun surprises\!
+There will be a variety of workshops and sessions designed for all skill levels as well as some fun surprises and activities around the island\!
 
 ### My Parents Want More Info
 
-We’ve prepared a [parent’s guide](/info/for-parents) to help address common concerns about safety and logistics.
+We’ve prepared a [Parent’s Guide](/info/for-parents) to help address common concerns about safety and logistics.
 
 ### How Do I Register?
 
-1. **Sign Up for [The Bay](/info/the-bay):** Complete the pre-event challenge to secure your eligibility and receive a travel grant.  
-2. **Accept your invitation:** Once you’ve finished [The Bay](/info/the-bay), you will confirm your invitation to participate in Shipwrecked!   
+1. **Sign Up for [The Bay](/info/the-bay):** Complete the pre-event challenge to secure your eligibility and receive a travel grant.
+2. **Accept your invitation:** Once you’ve finished [The Bay](/info/the-bay), you will confirm your invitation to participate in Shipwrecked!
 3. **Stay Updated:** Keep an eye on your email and the Shipwrecked channel on Hack Club Slack for updates.
 
 ### Who Can I Contact for More Information?
 
-If you have any questions, please email: [shipwrecked@hackclub.com](mailto:shipwrecked@hackclub.com) or join the [\#shipwrecked](https://hackclub.slack.com/archives/C08N0R86DMJ) channel  on Hack Club Slack.
+If you have any questions, please email: [shipwrecked@hackclub.com](mailto:shipwrecked@hackclub.com) or join the [\#shipwrecked](https://hackclub.slack.com/archives/C08KS9QGYRY) channel on Hack Club Slack.
