--- a/app/info/for-parents/page.mdx
+++ b/app/info/for-parents/page.mdx
@@ -8,7 +8,7 @@ Hack Club is a 501(c)(3) nonprofit organization whose mission is to **foster a w
 
 Shipwrecked is a **once-in-a-lifetime, four-day hackathon** organized by Hack Clubbers—for Hack Clubbers. It is a themed hackathon where participants are invited to build creative projects inspired by the idea of being shipwrecked—right on the **unique, historic grounds of Cathleen Stone Island in the Boston Harbor**.
 
-**Shipwrecked starts on Friday, August 8th at 3:00 pm and ends on Monday, August 11th at 5:00 pm**. This event offers a blend of outdoor adventure and tech creativity in a truly inspiring setting.
+**Shipwrecked starts on Friday, August 8th at 4 p.m. and ends on Monday, August 11th at 3 p.m.** This event offers a blend of outdoor adventure and tech creativity in a truly inspiring setting.
 
 _These times (not dates) could change, but they will be thoroughly communicated if so._
 
@@ -28,9 +28,9 @@ Participants can expect to **build creative projects inspired by the theme of be
 
 Shipwrecked takes place on **Cathleen Stone Island in the Boston Harbor**.
 
-Drop-off and pick-up will happen at EDIC Pier in the Seaport District. The ferry will leave promptly one hour after the start of the event and will not wait for latecomers. If your child is not able to make the scheduled ferry times, please reach out to us ASAP. Pick-up will be at **EDIC Pier at 5:00 pm on Monday, August 11th** *(time subject to change)*.
+Dropoff & pickup will happen at [EDIC Pier](https://maps.app.goo.gl/kMFxHkyxW6pCVzGF7) in the Seaport District. On Friday, there are two ferries scheduled at 5 p.m. and 6 p.m. The ferry will leave promptly, and latecomers will have to wait until Saturday morning to go to the island if they miss the ferry. If your child is not able to make the scheduled ferry times, please reach out to us ASAP. We will arrive back on Monday at 1:30 p.m. and 2:30 p.m. We will give further instructions closer to the event.
 
-EDIC Pier is near the "Silver Line Way" Silver Line stop on the MBTA. Hack Club staff will be stationed at Boston Logan International Airport both before and after the event to chaperone participants who are flying into Boston.
+EDIC Pier is near the "Silver Line Way" Silver Line stop on the [MBTA](https://www.mbta.com/). Hack Club staff will be stationed at Boston Logan International Airport both before and after the event to chaperone participants who are flying into Boston.
 
 Proper detailed travel instructions will be sent out closer to the event.
 
@@ -44,21 +44,9 @@ Proper detailed travel instructions will be sent out closer to the event.
 
 Hack Club is committed to creating a **safe and comfortable environment for students** at our events. As with previous Hack Club events, All adults present (Hack Club staff and external contractors) have undergone rigorous background checks (both at the state and Federal level). We aim for a gender-balanced community and offer a safe space for all teenagers. We will have support available and a way for you and your child to contact us if needed. During the event, a **toll-free staff helpline (+1 855-625-HACK)** will be available 24/7 if you have any questions. Cathleen Stone Island has cell reception and Wi-Fi so you will be able to stay in contact with your child.
 
-**What Should My Child Bring?**
+## What Should My Child Bring?
 
-Participants should bring:
-
-* Toiletries:
-  * Towel  
-  * Other hygiene products
-* A laptop (with charger).
-* A water bottle.
-* Any hardware they would like to use for their project.
-* Comfortable walking shoes.
-* (Optional) Sandals for beach activities.
-* Clothes for 3 nights and clothes you are comfortable swimming in (there may be an opportunity to swim).
-  * While it will be summer, it can still get chilly at night, so bring a light jacket or sweater.
-* It is too early to tell right now, but you *may* need a rain jacket / umbrella.
+Please see our [Suggested Packing List](/Shipwrecked%20Suggested%20Packing%20List.pdf) for an idea of what to bring. Remember that we will be on an island during the Boston summer and will be subject to the elements. Make sure to check the weather forecast leading up to the event\!
 
 ## Visa Information
 
@@ -73,7 +61,7 @@ If you need to apply for a visa and need a Letter of Invitation, please email [s
 - Phone Number
 - Permanent Address
 
-To reduce fraud surrounding visa letters, we ask that you only request a letter after your child has logged over 30 hours towards The Bay (more info [here](?tab=t.yxrvbn3vw5h5)).
+To reduce fraud surrounding visa letters, we ask that you only request a letter after your child has logged over 30 hours towards The Bay (more info [here](/info/travel)).
 
 ## Key Personnel
 ![Key Personnel](/Key-personel.webp)
