--- a/app/info/page.mdx
+++ b/app/info/page.mdx
@@ -6,16 +6,16 @@ Shipwrecked is a once-in-a-lifetime, four-day flagship hackathon on Cathleen Sto
 
 On **August 8-11**, you and 130 other hackers will gather on **Cathleen Stone Island in the Boston Harbor** for a once in a lifetime, **4-day story-based hackathon**!
 
-As soon as you get there, you'll all start working together to survive on the island you've been stranded on.
+As soon as you get there, you will all start working together to survive on the island you've been stranded on.
 
-Once we're on the island, everyone will work in smaller groups and complete quests. These will be centered around interacting with the world around you: helping the island dwellers develop software or hardware projects that help them sell their produce, helping the pirates plan their routes more effectively, or building projects to help your fellow shipwreck-mates organize your efforts more effectively. _(Not literally, of course... there are no pirates or island dwellers in the Boston Harbor. This is similar to Dungeons & Dragons!)_
+Once you are on the island, everyone will work in smaller groups and complete quests. These will be centered around interacting with the world around you: helping the island dwellers develop software or hardware projects that help them sell their produce, helping the pirates plan their routes more effectively, or building projects to help your fellow shipwreck-mates organize your efforts more effectively. _(Not literally, of course... There are no pirates or island dwellers in the Boston Harbor. This is similar to Dungeons & Dragons!)_
 
 # The Bay
 
-Through **The Bay**, you'll earn an invitation to Shipwrecked. In The Bay, you will spend 60 hours making 4 projects, about 15 hours each with the goal of making them **go viral**.
+Through **[The Bay](/info/the-bay)**, you will earn an invitation to Shipwrecked. In The Bay, you will spend **60 hours making 4 projects**, about 15 hours each.
 
-Make something that you're really proud of, and then share it with the world! You can find the criteria for virality [here](/info/go-viral). Once you reach 60 hours by shipping 4 projects & one of your projects has gone viral, you'll receive an invitation to Shipwrecked!
+Make something that you're really proud of, and then share it with the world! Once you reach 60 hours by shipping 4 projects, you will receive an invitation to Shipwrecked!
 
 ## The Pier
 
-Every week, you can meet up with your friends either in person or over [The Pier](https://pier.hackclub.com) - our video game-like digital meeting space to work!
+Every week, you can meet up with your friends either in person or over [The Pier](https://pier.hackclub.com) — our video game-like digital meeting space to work!
